--- a/MuckSettings.csproj
+++ b/MuckSettings.csproj
@@ -23,7 +23,9 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
-    <EmbeddedResource Include="settings" />
+    <EmbeddedResource Include="settings-windows" />
+    <EmbeddedResource Include="settings-linux" />
+    <EmbeddedResource Include="settings-osx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
